# Daily-Total-Energy-Forecast

./: .gitignore  pyproject.toml
notebooks/: daily_total_energy_forecast.ipynb
src/: daily_total_energy_forecast.py
